<resources>
    <string name="app_name">Family Connection</string>
    <string name="family_connections">Family Connections</string>
    <string name="menu_and_reservations">Menu and Reservations</string>
    <string name="front_desk">Front Desk</string>
    <string name="activities">Activities</string>
    <string name="contact">contact</string>
    <string name="salon">Salon</string>
    <string name="full_name">Full Name</string>
    <string name="room">Room # :</string>
    <string name="room_number">###</string>
    <string name="lifestyle">Lifestyle:</string>
    <string name="diet">Diet:</string>
    <string name="contact_information">Contact Information:</string>
    <string name="Number_phone">(###) ###-####</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="allergy">Allergy:</string>
    <string name="allergy_level">Allergy level</string>
    <string name="allergy_type">Allergy type</string>
    <string name="back">Back</string>
    <string name="input">input</string>
    <string name="contact_title">Contact</string>
    <string name="executive_director">Executive Director</string>
    <string name="activities_manager">Activities Manager</string>
    <string name="email_example_com">Email@example.com</string>
    <string name="chef">Chef</string>
    <string name="outings">Outings</string>
    <string name="faqs">FAQs</string>
    <string name="reason_for_outing">Reason for outing:</string>
    <string name="person_picking_up">Person picking up:</string>
    <string name="time_of_pick_up">Time of Pick up:</string>
    <string name="Company_name">Family Connection</string>
    <string name="date_of_pick_up">Date of pick-up:</string>
    <string name="hh_mm">HH:MM</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="confirm">Confirm</string>
    <string name="outing_confirmation">Outing confirmation</string>
    <string name="service_requested">Service requested:</string>
    <string name="service">Service</string>
    <string name="time_of_service">Time of Service:</string>
    <string name="date_of_service">Date of service:</string>
    <string name="salon_confirmation">Salon confirmation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_options">Menu options</string>
    <string name="occasion">Occasion</string>
    <string name="number_of_people_coming">Number of People coming:</string>
    <string name="restaurant_reservation">Restaurant Reservation</string>
    <string name="people">#_people</string>
    <string name="ok">OK</string>
    <string name="email_email_com">email@email.com</string>
    <string name="general_information">General Information</string>
    <string name="favorite_activity">Favorite Activity:</string>
    <string name="favorite">Favorite</string>
    <string name="recreational_activities">Recreational Activities</string>
</resources>